# rust_api_rest

./: .env  Cargo.toml  README.md  click_aqui_para_ver_documentacion.html  link_al_repositorio_en_github.txt  postman.json
documentation/: crates.js  help.html  search-index.js  settings.html  src-files.js
documentation/api/: all.html  index.html  sidebar-items.js
documentation/api/client/: index.html
documentation/api/db/: index.html  sidebar-items.js
documentation/api/env_var/: index.html  sidebar-items.js
documentation/api/errors/: index.html  sidebar-items.js
documentation/api/services/: index.html  sidebar-items.js
documentation/api/statistics/: index.html  sidebar-items.js
documentation/api/transaction/: index.html  sidebar-items.js
documentation/api/utils/: index.html  sidebar-items.js
documentation/src/api/: lib.rs.html
src/: lib.rs  main.rs  mod.rs
src/client/: client.rs  mod.rs
src/clients/: client.rs
src/clients/db/: add.rs  get.rs  init.rs  mod.rs  update_amount.rs
src/database/: connect.rs  mod.rs  utils.rs
src/db/: db.rs  error.rs  mod.rs
src/db/class/: mod.rs
src/env_var/: env_vars.rs  load.rs  mod.rs
src/errors/: bad_req.rs  cases.rs  db.rs  mod.rs  parse.rs
src/init/: init_databases.rs  mod.rs
src/services/: init.rs  mod.rs
src/services/resource/: client_balance.rs  mod.rs  new_client.rs  new_credit_transaction.rs  new_debit_transaction.rs  (+1 more)
src/statistics/: balances.rs  mod.rs
src/transaction/: mod.rs  transaction.rs
src/utils/: file.rs  mod.rs  proc.rs
test/: client_balance.http  new_client.http
(+150 files in other folders)
