[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.x", features = ["full"] }
lazy_static = "1.4"
chrono = "0.4" 
dotenv = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }